fixed global spacing for widgets

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -76,7 +76,8 @@
 
 /* main size of widget */
 .user_widget {
-  width: 210px;
+  width: 250px;
+  height: 300px;
   background-color: #464646;
 }
 
@@ -145,6 +146,7 @@
 /* ------------------------------- Game_widget ------------------------------- */
 .game_sessions_widget {
   width: 320px;
+  height: 251px;
   background-color: #464646;
 }
 
@@ -215,6 +217,7 @@
 /* ------------------------------- Friend_widget ------------------------------- */
 .friend_widget {
   width: 320px;
+  margin-top: -50px;
 }
 
 .fw_menu {
@@ -329,6 +332,8 @@ margin-right: 0px;
 /* ------------------------------- Post_widget ------------------------------- */
 .post_widget {
   width: 320px;
+  height: 280px;
+  margin-top: -50px;
 }
 
 .post_widget .row {
